# medical-ai-workshop

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: check-version.yml  publish.yml
apps/api/: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  middleware.ts  package.json  tsconfig.json
apps/api/app/: layout.tsx
apps/api/app/api/conversations/: route.ts
apps/api/app/api/conversations/[id]/: route.ts
apps/api/app/api/conversations/[id]/messages/: route.ts
apps/api/app/api/health/: route.ts
apps/api/app/api/patients/: route.ts
apps/api/app/api/patients/[id]/: route.ts
apps/api/app/api/swagger/: route.ts
apps/api/app/docs/: route.ts
apps/api/lib/: auth.ts
apps/api/lib/agent/: patient-agent.ts  prompts.ts
apps/api/lib/db/: index.ts  schema.ts
apps/api/scripts/: create-tokens.ts  reset.ts  seed.ts
apps/website/: .gitignore  README.md  package.json
apps/website/app/: globals.css  layout.tsx  page.tsx
apps/website/components/layout/: footer.tsx  header.tsx
apps/website/components/sections/: about.tsx  call-for-papers.tsx  faqs.tsx  global-health-panel.tsx  hero.tsx  organizers.tsx  schedule.tsx  signup.tsx  speakers.tsx  topics.tsx  virtual-clinic.tsx
apps/website/components/ui/: accordion.tsx  button.tsx  theme-toggle.tsx
examples/: .env.example  README.md  multi_round_conversation.py  pyproject.toml  settings.py
examples/cli/: __init__.py  config.py  interview.py  prompts.py  utils.py
